cmake_minimum_required(VERSION 3.13)
project(CCF)

set(CMAKE_CXX_STANDARD 14)

add_executable(CCF main.cpp CCF.cpp 1021.cpp 10815.cpp 12096.cpp cmake-build-debug/1022.cpp 1023.cpp uva540.cpp uva136.cpp uva400.cpp uva1592.cpp uva814.cpp uva221.cpp uva10935.cpp uva1594.cpp uva1593.cpp uva10763.cpp uva10391.cpp uva1595.cpp uva230.cpp uva1597.cpp uva12504.cpp uva1596.cpp uva1597_a.cpp uva442.cpp uva210.cpp uva210_a.cpp 11988.cpp uva12657.cpp uva679.cpp uva122.cpp uva297.cpp uva816.cpp uva10305.cpp uva_10129.cpp)